# frontier-pep

./: .gitignore  ETHICS.md  LICENSE  README.md  figure_generation.ipynb  pyproject.toml  requirements.txt
configs/: model_config.yaml  tda_config.yaml  viz_config.yaml
data/: README.md
data/processed/: .gitkeep
data/raw/: .gitkeep
data/schemas/: evidence_taxonomy.yaml  ontology.yaml
docs/: api_reference.md  methods.md  peptide_catalog.md
notebooks/: 01_data_exploration.ipynb  02_kg_analysis.ipynb  03_embedding_visualization.ipynb  04_tda_exploration.ipynb  05_embedding_validation.ipynb
scripts/: build_kg.py  generate_atlas.py  query_atlas.py  run_tda.py  train_gnn.py
src/peptide_atlas/: __init__.py  config.py  constants.py
src/peptide_atlas/api/: __init__.py  atlas.py  queries.py
src/peptide_atlas/cli/: __init__.py  main.py
src/peptide_atlas/data/: __init__.py  loaders.py  peptide_catalog.py  schemas.py  validators.py
src/peptide_atlas/explorer/: __init__.py  dashboard.py  graph.py  scatter.py
src/peptide_atlas/kg/: __init__.py  builder.py  export.py  queries.py
src/peptide_atlas/models/: __init__.py
src/peptide_atlas/models/gnn/: __init__.py  config.py  encoder.py  layers.py  pretraining.py
src/peptide_atlas/models/hyperbolic/: __init__.py  distance.py  poincare.py  projection.py
src/peptide_atlas/tda/: __init__.py  analysis.py  filters.py  mapper.py  persistence.py
src/peptide_atlas/viz/: __init__.py  interactive.py  mapper_graph.py  style.py  world_map.py
tests/: __init__.py  conftest.py  test_kg.py  test_models.py  test_schemas.py  test_tda.py  test_validators.py
