[project]
name = "peptide-atlas"
version = "0.1.0"
description = "A foundational knowledge resource for under-characterized peptide mechanisms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Agna Chan", email = "agna.chan@quantivida.com"}
]
keywords = ["peptides", "graph-neural-networks", "topological-data-analysis", "drug-discovery", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "geoopt>=0.5.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "gudhi>=3.8.0",
    "ripser>=0.6.4",
    "kmapper>=2.0.1",
    "umap-learn>=0.5.4",
    "hdbscan>=0.8.33",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
]
explorer = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
]

[project.scripts]
peptide-atlas = "peptide_atlas.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peptide_atlas"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=peptide_atlas --cov-report=term-missing"

